--- a/client/assets/styles/scss/views/views-toolbar.scss
+++ b/client/assets/styles/scss/views/views-toolbar.scss
@@ -12,7 +12,6 @@
 
 // toolbar tabs
 .btn-add-tab {
-  align-self: center;
   background: $purple-dark;
   border: 1px solid $purple-darkest;
   color: $purple-lighter;
